# GStreamerCommunication

./: CMakeLists.txt  gstreamerworker.cpp  gstreamerworker.h  main.cpp  receiver.c  receiver_video.c  sender.c  sender_video.c
